--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,16 +19,22 @@
     "@mui/material": "^7.3.2",
     "@mui/styled-engine-sc": "^7.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@tailwindcss/postcss": "^4.1.14",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
-    "lucide-react": "^0.545.0",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.3",
     "styled-components": "^6.1.19",
-    "three": "^0.180.0"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
