Final Push All Bugs Finished - Dashboard Remaining

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,11 @@
     "@mui/material": "^7.3.2",
     "@mui/styled-engine-sc": "^7.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.3.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
